# music-album

./: .gitignore  Cargo.toml  README.md  todo
migrations/2024-01-10-122553_create_users/: up.sql
migrations/2024-01-27-210545_create-albums/: up.sql
migrations/2024-01-30-200949_create_albums/: down.sql  up.sql
migrations/2024-02-10-122553_create_users/: up.sql
src/: config.rs  entrypoints.rs  main.rs  models.rs  schema.rs
src/entrypoints/: auth.rs  create_album.rs  create_user.rs  db_example.rs  delete_album.rs  example.rs  get_albums.rs  login.rs  rest.rs  test_album.rs  update_album.rs
src/repository/: albums.rs  errors.rs  get_albums.rs  users.rs
src/usecases/: auth.rs  create_album.rs  create_user.rs  db.rs  delete_album.rs  errors.rs  get_albums.rs  login.rs  test.rs  update_album.rs
src/utils/: hash.rs  jwt.rs
