[package]
name = "music-album"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
serde = { version = "1.0.196", features = ["derive"] }
diesel = { version = "2.1.4", features = ["mysql", "r2d2"] }
serde_json = "1.0.113"
